updates to all services controllers and respositories